2006/1/20
.updated CDomainType to add default and assumed value
.removed CCount and domain package

2006/1/09
.take away unnecessary rmTypeName from CPrimitiveObject constructor

2006/1/07
.Archetype extends AuthoredResource

2006/12/30
.added parent attribute to CObject and its children
.adjusted the constructor of CDomainType to support allowAny
.removed obsolete CDomainType concrete classes in the AOM package

2006/12/16
.added convenient factory methods in ExpressionLeaf
.added STRING as constant type in ExpressionItem

2007/04/18
.added class ArchetypeTerm 
.added constraintDefinition() and termDefinition() in ArchetypeOntology