@@ -145,9 +145,9 @@ public abstract class CAttribute extends ArchetypeConstraint {
      */
     public String parentNodePath() {
 
-        // remove both "/."  and attribute name
+        // remove both "/"  and attribute name
         return path().substring(0,
-                path().length() - rmAttributeName.length() - 2);
+                path().length() - rmAttributeName.length() - 1);
     }
 
     /**
@@ -217,10 +217,10 @@ public abstract class CAttribute extends ArchetypeConstraint {
  *  The Original Code is CAttribute.java
  *
  *  The Initial Developer of the Original Code is Rong Chen.
- *  Portions created by the Initial Developer are Copyright (C) 2003-2004
+ *  Portions created by the Initial Developer are Copyright (C) 2003-2007
  *  the Initial Developer. All Rights Reserved.
  *
- *  Contributor(s):
+ *  Contributor(s): Bert Verhees
  *
  * Software distributed under the License is distributed on an 'AS IS' basis,
  * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
